<resources>
    <string name="app_name">HydroSmart</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="Masuk_untuk_terhubung">Masuk ke akunmu untuk kembali terhubung</string>
    <string name="Register_Here">Don\'t have account ? Register Here</string>
    <string name="title_signup_page">Gabung untuk menikmati fitur lainnya</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="Login_here">Already have account ? Login Here</string>
    <string name="title_welcome_page">Welcome to HydroSmart</string>
    <string name="welcome">Welcome !</string>
    <string name="mau_menanam_apa_hari_ini">Mau menanam apa hari ini ?</string>
    <string name="title_activity_main_after">MainActivityAfter</string>
    <string name="title_home">Home</string>
    <string name="title_guide">Guide</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="bt_edit_profile">Edit Profile</string>
    <string name="reminder_title_button">Reminder</string>
    <string name="cancel_reminder_title_bt">Cancel</string>
    <string name="menu_detail_alat_bahan">Alat dan bahan</string>
    <string name="menu_detail_langkah">Langkah budidaya</string>
    <string name="welcome_message_home">Hi, %1$s!</string>
    <string name="welcome_message_plant">Mau menanam apa hari ini?</string>
    <string name="bt_rekomendasi">Butuh Rekomendasi ?</string>
    <string name="tv_menu_plant">Hydroponik Plant</string>
    <string name="tv_title_recom">Rekomendasi</string>
    <string name="tv_title_form">Isi form berikut</string>
    <string name="tv_sub_title">Agar kami dapat memberikan rekomendasi tanaman hidroponik</string>
    <string name="hint_luas">luas lahan => 0.05 (m)</string>
    <string name="hint_ph">ph kisaran 0 – 14</string>
    <string name="hint_kelembapan">kelembapan kisaran 40 – 80 (%)</string>
    <string name="hint_penyinaran">penyinaran kisaran 6 – 18 (jam)</string>
    <string name="bt_submit">Submit</string>
    <string name="tv_result">Result :</string>
    <string name="text_alarm_set_up">Reminder alarm set up</string>
    <string name="cancel_alarm">Reminder alarm dibatalkan</string>
    <string name="alarm_message">pesan alarm</string>
    <string name="tv_time_clock">Klik gambar jam diatas</string>
    <string name="HydroSmart">Hydro Smart</string>
    <string name="reinputpassword">Masukan ulang password</string>
    <string name="username">Username</string>
    <string name="join">Join</string>
    <string name="masuk_gabung">Masuk atau Gabung untuk menikmati fitur lainnya !</string>
    <string name="empty_field">Tolong isi formnya dulu</string>
    <string name="invalid_field">Invalid input. Please enter valid numbers.</string>
    <string name="password_confirm">Masukkan kembali password</string>
    <string name="title_login_page">Masuk ke akunmu untuk kembali terhubung!</string>
    <string name="signup_here">Belum Memiliki Akun? Sign Up</string>
    <string name="loading">Loading</string>
    <string name="title_alert_dialog">Success</string>
    <string name="message_alert_dialog">Akun telah berhasil dibuat!</string>
    <string name="message_positive_button">next</string>
    <string name="invalid_email_type">Format email tidak Valid</string>
    <string name="valid_password">Password harus minimal 6 huruf atau angka</string>
    <string name="invalid_password_matches">Password tidak sama</string>
    <string name="format_validation">Tolong isi sesuai format</string>
    <string name="message_alert_dialog_login">Login berhasil!</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <string name="logout">Logout</string>
    <string name="item">Item</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="failed_to_save_user">Gagal menyimpan data</string>
    <string name="empty_media">No media selected</string>
    <string name="permission_already_granted">Permission already granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="dialog_title">Pilih Gambar</string>
    <string name="dialog_message">Silahkan pilih dari mana anda ingin mengambil data</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="dialog_title_logout">Apakah Anda Yakin?</string>
    <string name="dialog_message_logout">Apakah anda yakin untuk logout?</string>
    <string name="positive_bt_text">Yakin</string>
    <string name="negative_bt_text">Tidak</string>
    <string name="batal_logout_text">Batal Logout</string>
    <string name="slogan1">Tanam tanpa tanah</string>
    <string name="slogan2">Raih hasil luar biasa</string>
    <string name="hint_suhu">suhu kisaran 5 – 30 (C)</string>
    <string name="error_message_suhu">Suhu harus berada dalam rentang 5 – 30</string>
    <string name="error_message_luas">Luas lahan harus minimal 0.05</string>
    <string name="error_message_ph">ph harus berada dalam rentang 0 – 14</string>
    <string name="error_message_kelembapan">Kelembapan harus berada dalam rentang 40 – 80</string>
    <string name="error_message_penyinaran">Penyinaran harus berada dalam rentang 6 – 18</string>
    <string name="title_calculate_page">Kalkulator Nutrisi</string>
    <string name="tv_title_calculator_PPM">Kalkulator PPM</string>
    <string name="tv_sub_title_PPM">Menghitung nutrisi yang dibutuhkan tanaman berdasarkan Part Per Million</string>
    <string name="hint_mass">mass solute mg</string>
    <string name="hint_volume">volume solution liters</string>
    <string name="tv_message_PPM">Anda membutuhkan PPM sebesar :</string>
    <string name="tv_title_calculator_Mass">Kalkulator Mass</string>
    <string name="tv_sub_title_Mass">Menghitung nutrisi yang dibutuhkan tanaman berdasarkan satuan Massa</string>
    <string name="hint_ppm">ppm</string>
    <string name="tv_message_mass">Anda membutuhkan nutrisi Massa sebesar :</string>
    <string name="tv_title_calculator_Volume">Kalkulator Volume</string>
    <string name="tv_sub_title_Volume">Menghitung nutrisi yang dibutuhkan tanaman per Volume</string>
    <string name="tv_message_volume">Anda membutuhkan nutrisi dengan volume sebesar :</string>
    <string name="empty_string_alat_bahan">Tunggu update patch selanjutnya, untuk tanaman yang lebih banyak</string>
    <string name="error_message_detail">Tunggu update patch selanjutnya, untuk informasi tanaman yang lebih banyak</string>
    <string name="title_market">Paket Lengkap Hidroponik</string>
    <string name="price_market">Rp. 70.000</string>
    <string name="title_market_page">Beli sekarang!</string>
</resources>