<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".beforelogin.MainActivity">

    <TextView
        android:id="@+id/tv_message_ppm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:fontFamily="@font/baloo"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/card_view"
        />

    <TextView
        android:id="@+id/tv_maumenanamapa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:fontFamily="@font/baloo"
        android:text="@string/mau_menanam_apa_hari_ini"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/tv_message_ppm"
        />

    <!--    <TextView-->
    <!--        android:id="@+id/tv_Join"-->
    <!--        android:layout_width="200dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:paddingTop="5dp"-->
    <!--        android:paddingBottom="5dp"-->
    <!--        android:layout_marginTop="45dp"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:gravity="center"-->
    <!--        android:background="@drawable/rounded_background"-->
    <!--        android:elevation="8dp"-->
    <!--        android:textColor="@color/md_theme_light_primaryContainer"-->
    <!--        android:fontFamily="@font/baloo"-->
    <!--        android:text="@string/join"-->
    <!--        android:textStyle="bold"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/tv_maumenanamapa"-->
    <!--        />-->




    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:alpha="0.2"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btJoin"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:textSize="20sp"
        android:elevation="8dp"
        android:text="@string/join"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/tv_maumenanamapa"
        android:drawableEnd="@drawable/baseline_login_24"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/gabung_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_plant"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            tools:listitem="@layout/item_plants" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/gabung_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="5dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/masuk_gabung"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        app:drawableStartCompat="@drawable/baseline_warning_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="610dp" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

</androidx.constraintlayout.widget.ConstraintLayout>